<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="lozinka">Lozinka</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="zaboravio_si_lozinku">Zaboravio si lozinku?</string>
    <string name="prijava">Prijava</string>
    <string name="napravi_canino_korisni_ki_ra_un">Napravi Canino korisnički račun</string>
    <string name="nastavi_kao_gost">Nastavi kao gost</string>
    <string name="prijavi_se_svojim_canino_ra_unom">Prijavi se svojim Canino računom</string>
    <string name="ime">Ime</string>
    <string name="prezime">Prezime</string>
    <string name="godine">Godine</string>
    <string name="spol" tools:ignore="DuplicateDefinition">Spol</string>
    <string name="mjesto">Mjesto</string>
    <string name="telefon">Telefon</string>
    <string name="canino">Canino</string>
    <string name="zapo_ni">ZAPOČNI</string>
    <string name="eta">Šetač</string>
    <string name="vlasnik">Vlasnik</string>
    <string name="registracija">Registracija</string>
    <string name="registriraj_se">Registriraj se</string>
    <string name="ponovi_lozinku">Ponovi lozinku</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registriraj_se_kao_vlasnik">Registriraj se kao vlasnik</string>
    <string name="kojeg_ljubimca_imate">Kojeg ljubimca imate?</string>
    <string name="ime_psa">Ime psa</string>
    <string name="pasmina">Pasmina</string>
    <string name="starost_godine">Starost(Godine)</string>
    <string name="reci_ne_to_o_svom_psu">Reci nešto o svom psu</string>
    <string name="tra_i">Traži…</string>
    <string name="Obajvi">Button</string>
    <string name="objavi">Objavi</string>
    <string name="u_va_oj_blizini">U Vašoj blizini</string>
    <string name="objava">Objava</string>
    <string name="elim_da_moga_psa">Ime psa:</string>
    <string name="koristi_prija_nje_podatke_psa_pregledaj_ih">Koristi prijašnje podatke o psu. <u><b>Pregledaj ih!</b></u></string>
    <string name="od"><u>od</u></string>
    <string name="datuma"><u>datuma</u></string>
    <string name="dodo"><u>do</u></string>
    <string name="po_alji_obajvu_svim_obli_njim_eta_ima">Pošalji objavu svim obližnjim šetačima</string>
    <string name="elim_da_ga_netko_pr_uva_ili_pro_eta">Želim da ga netko pričuva ili prošeta</string>
    <string name="ima_li_psa">Imaš li psa?</string>
    <string name="da">Da</string>
    <string name="ne">Ne</string>
    <string name="koje_mu_je_ime_i_koje_je_pasmine">Koje mu je ime i koje je pasmine?</string>
    <string name="loki">Loki</string>
    <string name="pudl">Pudl</string>
    <string name="reci_ne_to_o_njemu">Reci nešto o njemu…</string>
    <string name="moj_pas_je">Moj pas je…</string>
    <string name="dalje">Dalje</string>
    <string name="re_e_nam_jo_par_stvari_o_sebi">Reci nam još par stvari o sebi…</string>
    <string name="dopuni_registraciju">Dopuni registraciju</string>
    <string name="kada_se_okotio">Kada se okotio?</string>
    <string name="kako_se_zove">Kako se zove?</string>
    <string name="koje_je_pasmine">Koje je pasmine?</string>
</resources>