<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bck"
    tools:context=".login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="340sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:text="@string/prijavi_se_svojim_canino_ra_unom"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="301sp"
        android:layout_height="48sp"
        android:autofillHints="nekalozinka"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="301sp"
        android:layout_height="48sp"
        android:autofillHints="ime@domena"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_mail_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.224"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="48dp"
        android:text="@string/zaboravio_si_lozinku"
        android:textColor="#fAfAFA"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="SmallSp" />

    <!--
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="@string/napravi_canino_korisni_ki_ra_un"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrijava"
        app:layout_constraintVertical_bias="0.381" />-->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/prijava"
        android:textColor="#fff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.457" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:autofillHints="nista"
        android:background="@drawable/google_button"
        android:drawableStart="@drawable/ic_google"
        android:drawablePadding="8dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/google"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:autofillHints="nista"
        android:background="@drawable/facebook_button"
        android:drawableStart="@drawable/ic_facebook"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/facebook"
        android:inputType="textPassword"
        android:paddingStart="9dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/napravi_canino_korisni_ki_ra_un"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPrijava"
        android:layout_width="202sp"
        android:layout_height="70sp"
        android:backgroundTint="#fff"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/prijava"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:cornerRadius="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>