<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/regLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bck"
    tools:context=".register">


    <!-- 115 vertical -->


    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="770dp"
        android:layout_height="1273dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_undraw_modern_woman"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="@string/todo"
        android:alpha="0.8"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="2"
        android:text="@string/registriraj_se"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextIme"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/ime"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPasswordAgain"
        android:layout_width="304sp"
        android:layout_height="48sp"
        android:autofillHints="nekalozinka"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/ponovi_lozinku"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.474"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPhone"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:layout_margin="30dip"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_local_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/telefon"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.763"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="304sp"
        android:layout_height="48sp"
        android:layout_margin="30dip"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_mail_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.18"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextLocation"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:layout_margin="30dip"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_mail_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/mjesto"
        android:inputType="textAutoComplete"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.763"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="304sp"
        android:layout_height="48sp"
        android:autofillHints="nekalozinka"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/lozinka"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextNumberGodine"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_spol_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/godine"
        android:inputType="number"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.604"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editTextNumberSpol"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_spol_icon"
        android:drawableEnd="@drawable/ic_down_arrow"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/spol"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="20dip"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.604"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/editTextTextPrezime"
        android:layout_width="145sp"
        android:layout_height="48sp"
        android:layout_marginEnd="10dip"
        android:autofillHints=""
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_baseline_account_circle_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/prezime"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="#fff"
        android:textColorHint="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="RtlSymmetry" />


    <!--android:drawableStart="@drawable/ic_dog_in_front_of_a_man"-->


    <!--

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="145sp"
        android:layout_height="48dp"
        android:background="@drawable/light_green_choose"
        android:button="@null"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/eta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/RadioButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="145sp"
        android:layout_height="48dp"
        android:background="@drawable/light_green_choose"
        android:button="@null"
        android:ems="10"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/vlasnik"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:theme="@style/RadioButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />
-->


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistracija"
        android:layout_width="165dp"
        android:layout_height="76dp"
        android:backgroundTint="#fff"
        android:fontFamily="@font/montserrat_bold"
        android:shadowDx="20"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/registracija"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:cornerRadius="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>